--- a/Webstack/client/components/navbar/navbar.html
+++ b/Webstack/client/components/navbar/navbar.html
@@ -14,6 +14,7 @@
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
+        <li ng-show="isLoggedIn()"><a href="/business">Business</a></li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
