--- a/Webstack/client/components/navbar/navbar.html
+++ b/Webstack/client/components/navbar/navbar.html
@@ -7,15 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">@Table</a>
+      <a ng-hide="isLoggedIn()" href="/" class="navbar-brand">@Table</a>
+      <a ng-show="isLoggedIn()" href="/dashboard" class="navbar-brand">@Table</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
+        <li ng-repeat="item in menu | filter:isShown" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
-        <li ng-show="isLoggedIn()"><a href="/business">Business</a></li>
-        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
