--- a/Android/AtTable/app/src/main/res/layout/activity_main.xml
+++ b/Android/AtTable/app/src/main/res/layout/activity_main.xml
@@ -6,35 +6,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:id="@+id/relativeLayout1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/scanview" />
-
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:id="@+id/buttonscn"
-        android:layout_alignParentBottom="true"
+        android:text="@string/scan_button"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="138dp"
-        android:text="startScan" />
+        android:textSize="@dimen/abc_text_size_large_material" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ChooseOrder"
-        android:id="@+id/orderchoice"
-        android:layout_alignParentBottom="true"
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:text="@string/app_name"
+        android:id="@+id/textView"
+        android:layout_marginTop="53dp"
+        android:textSize="@dimen/abc_text_size_display_3_material"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
 </RelativeLayout>
