--- a/Android/AtTable/app/src/main/res/layout/activity_order_select.xml
+++ b/Android/AtTable/app/src/main/res/layout/activity_order_select.xml
@@ -6,11 +6,27 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="kr.ac.kaist.mobile.attable.OrderSelect">
 
+    <TextView
+        android:id="@+id/order_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/order_title"
+        android:textSize="40dp"/>
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="40px"
+        android:layout_below="@+id/order_title"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/space" />
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/space" />
 
 </RelativeLayout>
