--- a/Android/AtTable/app/src/main/res/layout/list_item_order.xml
+++ b/Android/AtTable/app/src/main/res/layout/list_item_order.xml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="id"
-        android:textStyle="bold"
-        android:gravity="left"
-        android:height="40sp" />
+    <TableRow>
+        <TableLayout
+            android:layout_width="0dip"
+            android:layout_weight="5"
+            android:layout_height="fill_parent">
+            <TableRow android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="0dip">
+                <TextView
+                    android:id="@+id/name"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:height="35sp"
+                    android:layout_width="0dip" android:layout_weight="2"
+                    android:layout_height="fill_parent" />
+                <TextView
+                    android:id="@+id/price"
+                    android:textSize="20dp"
+                    android:layout_width="0dip" android:layout_weight="1"
+                    android:layout_height="fill_parent" />
+            </TableRow>
+            <TableRow android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="0dip">
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="0dip" android:layout_weight="1"
+                    android:layout_height="fill_parent" />
+            </TableRow>
+        </TableLayout>
 
-</RelativeLayout>
+        <TableLayout android:layout_width="0dip"
+            android:layout_weight="1" android:layout_height="fill_parent">
+            <TableRow>
+                <NumberPicker
+                    android:id="@+id/amount"
+                    android:layout_width="0dip" android:layout_weight="1"
+                    android:layout_height="fill_parent"/>
+            </TableRow>
+        </TableLayout>
+    </TableRow>
+
+</TableLayout>
