--- a/Android/AtTable/app/src/main/res/layout/activity_order_select.xml
+++ b/Android/AtTable/app/src/main/res/layout/activity_order_select.xml
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/order_title"
-        android:textSize="40dp"/>
+        android:textSize="25sp"/>
 
     <Space
-        android:layout_width="20px"
-        android:layout_height="40px"
+        android:layout_width="20dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/order_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -25,8 +25,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/space" />
+        android:layout_below="@+id/space"
+        android:layout_above="@+id/submitOrder" />
+
+    <Button
+        android:id="@+id/submitOrder"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:text="@string/order_proceed"/>
 
 </RelativeLayout>
