--- a/Android/AtTable/app/src/main/res/layout/list_item_order.xml
+++ b/Android/AtTable/app/src/main/res/layout/list_item_order.xml
@@ -6,38 +6,37 @@
         <TableLayout
             android:layout_width="0dip"
             android:layout_weight="5"
-            android:layout_height="fill_parent">
+            android:layout_height="match_parent">
             <TableRow android:layout_width="0dip" android:layout_weight="1"
                 android:layout_height="0dip">
                 <TextView
                     android:id="@+id/name"
                     android:textStyle="bold"
                     android:textSize="20dp"
-                    android:height="35sp"
                     android:layout_width="0dip" android:layout_weight="2"
-                    android:layout_height="fill_parent" />
+                    android:layout_height="match_parent" />
                 <TextView
                     android:id="@+id/price"
                     android:textSize="20dp"
                     android:layout_width="0dip" android:layout_weight="1"
-                    android:layout_height="fill_parent" />
+                    android:layout_height="match_parent" />
             </TableRow>
-            <TableRow android:layout_width="0dip" android:layout_weight="1"
+            <TableRow android:layout_width="0dip" android:layout_weight="3"
                 android:layout_height="0dip">
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="0dip" android:layout_weight="1"
-                    android:layout_height="fill_parent" />
+                    android:layout_height="match_parent" />
             </TableRow>
         </TableLayout>
 
         <TableLayout android:layout_width="0dip"
-            android:layout_weight="1" android:layout_height="fill_parent">
+            android:layout_weight="1" android:layout_height="match_parent">
             <TableRow>
                 <NumberPicker
                     android:id="@+id/amount"
                     android:layout_width="0dip" android:layout_weight="1"
-                    android:layout_height="fill_parent"/>
+                    android:layout_height="match_parent" />
             </TableRow>
         </TableLayout>
     </TableRow>
