--- a/Android/AtTable/app/src/main/res/layout/activity_order_select.xml
+++ b/Android/AtTable/app/src/main/res/layout/activity_order_select.xml
@@ -22,8 +22,8 @@
         android:id="@+id/space" />
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
         android:layout_below="@+id/space"
         android:layout_above="@+id/aggregate" />
