--- a/Android/AtTable/app/src/main/res/layout/list_item_order_place.xml
+++ b/Android/AtTable/app/src/main/res/layout/list_item_order_place.xml
@@ -7,22 +7,22 @@
             <TextView
                 android:id="@+id/name"
                 android:textStyle="bold"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:layout_width="0dip" android:layout_weight="2"
                 android:layout_height="match_parent" />
             <TextView
                 android:id="@+id/price"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 android:layout_width="0dip" android:layout_weight="1"
                 android:layout_height="match_parent" />
             <TextView
                 android:id="@+id/amount"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 android:layout_width="0dip" android:layout_weight="1"
                 android:layout_height="match_parent" />
             <TextView
                 android:id="@+id/aggregate"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 android:layout_width="0dip" android:layout_weight="1"
                 android:layout_height="match_parent" />
         </TableRow>
